--- a/README.Rmd
+++ b/README.Rmd
@@ -22,10 +22,11 @@ The goal of metamediate is to estimate a pooled total effect in meta-analysis.
 
 ## Installation
 
-You can install the released version of metamediate from [CRAN](https://CRAN.R-project.org) with:
+You can install the most updated version of metamediate as follows:
 
 ``` r
-install.packages("metamediate")
+library(devtools)
+devtools::install_github("colleenchan/metamediate")
 ```
 
 ## Example
@@ -34,5 +35,5 @@ This is a basic example which shows you how to solve a common problem:
 
 ```{r example}
 library(metamediate)
-## basic example code
+
 ```
