--- a/README.Rmd
+++ b/README.Rmd
@@ -31,9 +31,32 @@ devtools::install_github("colleenchan/metamediate")
 
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
-
-```{r example}
+```
 library(metamediate)
+# Simulate a meta-analysis
+S <- 30
+ST <- 10
+SB <- 10
+SD <- 10
+set.seed(1)
+beta.T <- rnorm(ST + SB, mean = 0.3, sd = 0.05)
+set.seed(1)
+beta.D <- rnorm(SD + SB, mean = 0.2, sd = 0.05)
+set.seed(1)
+var.beta.T <- rnorm(ST + SB, mean = 0.05, sd = 0.01)
+set.seed(1)
+var.beta.D <- rnorm(SD + SB, mean = 0.05, sd = 0.01)
+df <- data.frame(beta.T = c(beta.T, rep(NA, SD)),
+                  beta.D = c(rep(NA, ST), beta.D),
+                  var.beta.T = c(var.beta.T, rep(NA, SD)),
+                  var.beta.D = c(rep(NA, ST), var.beta.D))
+                  
+# Estimate summary mediation proportion and pooled effect
+res <- metamed(te = df$beta.T,
+                te_lb = df$beta.T - qnorm(0.975) * sqrt(df$var.beta.T),
+                de = df$beta.D,
+                de_lb = df$beta.D - qnorm(0.975) * sqrt(df$var.beta.D),
+                author = paste("Study", seq(1:S)),
+                rr = "identity")
 
 ```
